#2758 Java 11 usage